# ingressnightmare-policy

./: Cargo.toml  README.md  blog-post.md  metadata.yml  nvsecurityrule.yaml  policy-manifest.yaml
.github/workflows/: policy.yml  release.yml
assets/: cluster-admission-policy.yaml  nvsecurityrule.yaml
monitor/: ingressnightmare-monitor.yaml
src/: lib.rs  settings.rs
test-data/: allow_other.json  block_config-snippet_enabled.json  block_cve_auth-url.json
test-yaml/: ingress-bad.yaml
tests/: allow_config-snippet_disabled.json  allow_other.json  block_config-snippet_enabled.json  block_cve_auth-url.json
