[package]
name = "ingressnightmare-policy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
kubewarden-policy-sdk = "0.13.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
k8s-openapi = { version = "0.24.0", features = ["v1_28"] }
