[package]
name = "ingressnightmare-policy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
kubewarden-policy-sdk = { version = "0.13.2", default-features = false }
k8s-openapi = { version = "0.24.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rstest = "0.25"
k8s-openapi = { version = "0.24.0", features = ["v1_28"] }

[profile.release]
opt-level = 's'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to optimize further
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary
